# chess-rating-system

./: .envrc  .gitignore  README.md  alembic.ini  database.db  requirements.txt  settings.json  setup.cfg
alembic/versions/: 06ca3045490c_result_to_floatd.py  1aebe87e1aa7_add_user_color_to_users_games.py  2405c6ff775a_add_rounds_table.py  3c7e757a82df_user_roles.py  5b3b85f23bef_add_game_and_tournament_dependencies.py  aed8d781d740_result_column_from_game_to_usersgames.py  b3191bcbe809_add_tournament_description.py
src/chess_rating/: game.py  player.py
src/chrate/: app.py  settings.py
src/chrate/admin/: admin.py
src/chrate/blueprints/admin/: admin.py
src/chrate/blueprints/admin/templates/: admin.html
src/chrate/blueprints/auth/: login.py
src/chrate/blueprints/auth/templates/: login.html
src/chrate/blueprints/game/: game.py
src/chrate/blueprints/game/templates/: record.html
src/chrate/blueprints/home/: home.py
src/chrate/blueprints/home/templates/: home.html
src/chrate/blueprints/login/: login.py
src/chrate/blueprints/login/templates/: login.html
src/chrate/blueprints/profile/: profile.py
src/chrate/blueprints/profile/templates/: profile.html  public-profile.html
src/chrate/blueprints/register/: register.py
src/chrate/blueprints/tournament/: tournament.py
src/chrate/cli/: cmd_db.py  cmd_websrv.py  main.py
src/chrate/model/: rating.py
src/chrate/static/styles/: base.css
src/chrate/templates/: base.html  game_record.html  home.html  register.html  registration.html  sign-in.html
tests/: basic_test.py  upload_test_data.py
(+8 files in other folders)
