[metadata]
name = chrate
version = 0.0.1
author = injornal
description = chess rating

[options]
packages = find:
package_dir =
    = src
include_package_data=True

[options.packages.find]
where = src

[options.package_data]
chrate = templates/*

[options.entry_points]
console_scripts =
    chcli = chrate.cli.main:main